commented out unused styles

--- a/react-app/src/components/RightSideBar/RightSideBar.css
+++ b/react-app/src/components/RightSideBar/RightSideBar.css
@@ -1,4 +1,4 @@
-.right-sidebar-container{
+/* .right-sidebar-container{
   width: 280px;
   user-select: none;
 }
@@ -46,4 +46,4 @@
   .contacts-container{
     display: none;
   }
-}
+} */
