--- a/react-app/src/components/auth/authStyles/LoginForm.css
+++ b/react-app/src/components/auth/authStyles/LoginForm.css
@@ -1,25 +1,48 @@
 
+.login-page-top{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  margin-top: 5em;
+  height: 100vh;
+  position: relative;
+
+}
+.sub-header-text{
+  font-size: 15px;
+  max-width: 300px;
+  padding-left: .3em;
+  font-weight: 600;
+}
+.left-login-page{
+  height: 400px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 10em;
+  margin-right: 5em;
+}
 .login-form{
   width: 330px;
   height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto;
   background-color: white;
   border-radius: 5px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .fb-header-img{
   margin-top: 20px;
-  margin-bottom: 20px;
-  width: 200px;
+  margin-bottom: 5px;
+  width: 300px;
   caret-color: transparent;
+  object-fit: fill;
 }
 .fb-header-div{
-  width: 200px;
   margin: 0 auto;
-
 }
 .login-form > div{
   width: 364px;
@@ -67,9 +90,46 @@
 
 .about-text{
   font-size: 12px;
-  text-align: center;
+  line-height: 20px;
+  font-weight: 400;
+  color: #8a8d91;
   word-wrap: break-word;
-  width: 800px;
-  margin: 20px auto;
-  border-top: 1px solid lightgray;
+  width: 80%;
+  margin-left: 5em;
+  margin: 1em auto;
+  border-bottom: 1px solid lightgray;
+  padding-bottom: 1em;
+}
+
+.login-footer{
+  background-color: white;
+  width: 100%;
+  height: 25%;
+  position: absolute;
+
+  bottom: -10em;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.footer-technologies{
+  margin: 0 auto;
+  width: 80%;
+  font-size: 15px;
+  color: #8a8d91;
+  display: flex;
+  justify-content: space-around;
+}
+.footer-technologies>*{
+  margin-right: .5em;
+}
+.tech{
+  font-size: 12px;
+}
+.tech-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
